--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Norse-Bold;
-    src: url(/fonts/Norse-Bold.otf);
+    src: url(./fonts/Norse-Bold.otf);
 }
 
 * {
@@ -29,7 +29,7 @@ body {
 /* LEFT SECTION OF THE PAGE */
 .left-section {
     width: 40%;
-    background-image: url(/images/halie-west-unsplash.jpg);
+    background-image: url(./images/halie-west-unsplash.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
