--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ img[src="images/odin-lined.png"] {
 
 .backgorund-image-credit {
     position: relative;
-    top: 500px;
-    left: 70px;
+    top: 450px;
+    left: 55px;
 }
 
 /* RIGHT SECTION OF THE PAGE */
@@ -87,7 +87,7 @@ img[src="images/odin-lined.png"] {
 }
 
 .right-section__copy.first-paragraph {
-    margin-bottom: 30px;
+    margin-top: 20px 0;
     max-width: 70%;
 }
 
