--- a/style.css
+++ b/style.css
@@ -87,8 +87,9 @@ img[src="images/odin-lined.png"] {
 }
 
 .right-section__copy.first-paragraph {
-    margin-top: 20px 0;
-    max-width: 70%;
+    max-width: 75%;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .form-wrapper {
